# rustathon

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/: 20220101010101_create_users_table.sql  20220101010201_create_projects_table.sql  20220101010301_create_tasks_table.sql
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  middleware.rs  models.rs  ws.rs
src/routes/: mod.rs  projects.rs  tasks.rs
templates/: index.html  login.html  register.html
