[package]
name = "hackathon-starter-app"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.4"
tower-http = { version = "0.1", features = ["serve"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
jsonwebtoken = "7.2"
oauth2 = "4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.15"
uuid = "0.8"
bcrypt = "0.11"
stripe = "0.17"
twilio = "0.1.0"
openai = "0.1.0" # Hypothetical crate, please check actual availability
